--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,21 +1,14 @@
 ---
 layout: default
 ---
+<div class="post">
 
-  <div id="page">
-    <header class="page-header">
-      <h2>{{ page.title }}</h2>
-    </header>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
 
-    <article class="page-content">
-      {{ content }}
-    </article>
+  <article class="post-content">
+    {{ content }}
+  </article>
 
-
-  </div><!-- end page content -->
-
-
-  {% if site.owner.disqus-shortname and page.comments == true %}
-  <div id="disqus_thread"></div>
-  {% include disqus.html %}
-  {% endif %}
+</div>
