--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,8 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     line-height: 1.5em;
 }
-p {
+p 
+{
     display: block;
     -webkit-margin-before: 1em;
     -webkit-margin-after: 1em;
